# PolCam

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  pyproject.toml  pytest.ini
polcam/: __init__.py
polcam/core/: base_module.py  caching.py  camera.py  camera_module.py  events.py  image_plotter.py  image_processor.py  image_toolbar_controller.py  processing_module.py  settings.py  toolbar_controller.py
polcam/gui/: camera_control.py  camera_select_dialog.py  image_display.py  main_window.py  settings_dialog.py  status_indicator.py  styles.py
polcam/gui/widgets/: angle_selector.py  control_group.py  image_toolbar.py  parameter_control.py  polarization_control.py  status_indicator.py  tool_bar.py  white_balance.py
polcam/utils/: logger.py
tests/: conftest.py  test_base_module.py  test_camera.py  test_camera_module.py  test_events.py  test_gui.py  test_image_processor.py  test_integration.py
