[project]
name = "polcam"
version = "1.0.0"
description = "PolCam is a Python application for controlling and processing polarization camera images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10",
    "numpy<2",
    "opencv-python>=4.11",
    "polanalyser>=3.0.0",
    "pyside6>=6.10",
    "qtpy>=2.4",
    "tifffile",
]

[tool.uv]
python-install-mirror = "https://ghfast.top/https://github.com/astral-sh/python-build-standalone/releases/download/"
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
]
